--- a/.test/docker-compose.yml
+++ b/.test/docker-compose.yml
@@ -20,6 +20,7 @@ services:
     volumes:
       - ./genesis.json:/echo/genesis.json
       - ./access.json:/echo/access.json
+    container_name: echo
 
   echo-wallet:
     image: echoprotocol/echo-wallet:0.11.0-rc.1
