--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,8 @@ jobs:
         - docker
       before_install:
         - docker-compose -f ./.test/docker-compose.yml up -d echo
+        - docker logs echo
+        - sleep 10
         - curl 127.0.0.1:6311
         - docker-compose -f ./.test/docker-compose.yml up echo-wallet
         - docker ps
