--- a/.test/docker-compose.yml
+++ b/.test/docker-compose.yml
@@ -25,13 +25,14 @@ services:
   echo-wallet:
     image: echoprotocol/echo-wallet:0.11.0-rc.1
     container_name: echo-wallet
-    network_mode: host
     command:
-      -s ws://127.0.0.1:6311
-      --chain-id="de2c5563b93b6c45286b8380b617ea81669e2bc11036ac83a695be52834d2136"
+      -s ws://echo:6311
+      --chain-id="e9493077d35c76c715705fc2f170a9fbcabf90a9edc993c6660717e270e5f550"
       --wallet-file="/echo/walletdata/wallet.json"
       --history-file="/echo/walletdata/history"
       -r 0.0.0.0:6312
     ports:
       - 6312:6312
     tty: true
+    links:
+      - echo
