--- a/.travis.yml
+++ b/.travis.yml
@@ -22,10 +22,7 @@ jobs:
       services:
         - docker
       before_install:
-        - docker-compose -f ./.test/docker-compose.yml up -d echo
-        - docker logs echo
-        - sleep 10
-        - docker-compose -f ./.test/docker-compose.yml up -d echo-wallet
+        - docker-compose -f ./.test/docker-compose.yml up -d
         - docker logs echo-wallet
         - docker ps
       script:
