--- a/.test/docker-compose.yml
+++ b/.test/docker-compose.yml
@@ -2,7 +2,7 @@ version: "2"
 
 services:
   echo:
-    image: echoprotocol/echo:0.11.0-rc.1
+    image: echoprotocol/echo:0.11.1
     command:
       --start-echorand
       --account-info="[\"1.2.6\", \"5KkYp8qdQBaRmLqLz8WVrGjzkt7E13qVcr7cpdLowgJ1mjRyDx2\"]"
@@ -24,11 +24,11 @@ services:
     container_name: echo
 
   echo-wallet:
-    image: echoprotocol/echo-wallet:0.11.0-rc.1
+    image: echoprotocol/echo-wallet:0.11.1
     container_name: echo-wallet
     command:
       -s ws://echo:6311
-      --chain-id="c9b734031dfed36512d237364fdfd5631605c1594df35aca2a8feb98da1f08a7"
+      --chain-id="9e500608392416719b6aa206d02e75d12e479e92dd7c4ccba7dec9b63b9517ec"
       --wallet-file="/echo/walletdata/wallet.json"
       --history-file="/echo/walletdata/history"
       -r 0.0.0.0:6312
