--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"types": "./types/index.d.ts",
 	"scripts": {
 		"pretest": "npm run build && babel-node ./test/preparation/preparation.js",
-		"test": "mocha --require @babel/register --require @babel/polyfill --exit -w test/api/register.account.pow.test.js",
+		"test": "mocha --require @babel/register --require @babel/polyfill --exit",
 		"test-api": "mocha --compilers js:@babel/register --require @babel/polyfill test/api.test.js",
 		"test-subscriber": "mocha --compilers js:@babel/register --require @babel/polyfill test/subscriber.test.js",
 		"test-contract": "mocha --compilers js:@babel/register --require @babel/polyfill test/contract.test.js",
