--- a/.travis.yml
+++ b/.travis.yml
@@ -31,10 +31,4 @@ jobs:
       script:
         - npm install
         - npm run build
-      deploy:
-        provider: npm
-        skip_cleanup: true
-        email: $NPM_EMAIL
-        api_key: $NPM_TOKEN
-        on:
-          tags: true
+        - ./script.sh
