--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "echojs-lib",
-	"version": "1.9.1-echo.12.1",
+	"version": "1.9.1-echo.12-rc.1",
 	"description": "Pure JavaScript ECHO library for node.js",
 	"main": "./dist/index.js",
 	"types": "./types/index.d.ts",
@@ -10,6 +10,7 @@
 		"test-api": "mocha --compilers js:@babel/register --require @babel/polyfill test/api.test.js",
 		"test-subscriber": "mocha --compilers js:@babel/register --require @babel/polyfill test/subscriber.test.js",
 		"test-contract": "mocha --compilers js:@babel/register --require @babel/polyfill test/contract.test.js",
+		"test-utils": "mocha --compilers js:@babel/register --require @babel/polyfill test/crypto/utils.test.js",
 		"build": "npx babel src --out-dir dist",
 		"check-typing": "npx tsc",
 		"lint": "eslint .",
