--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
 		"@babel/core": "^7.2.2",
 		"@babel/node": "^7.5.5",
 		"@babel/plugin-transform-runtime": "^7.6.0",
+		"@babel/polyfill": "^7.7.0",
 		"@babel/preset-env": "^7.3.1",
 		"@babel/register": "^7.0.0",
 		"@types/bytebuffer": "^5.0.40",
@@ -70,10 +71,10 @@
 		"eslint-plugin-import": "^2.9.0",
 		"eslint-plugin-jsx-a11y": "^6.1.2",
 		"eslint-plugin-react": "7.13.0",
+		"fs-extra": "^7.0.1",
 		"husky": "^2.7.0",
 		"mocha": "^5.2.0",
 		"redux": "^4.0.1",
-		"typescript": "^3.5.3",
-		"fs-extra": "^7.0.1"
+		"typescript": "^3.5.3"
 	}
 }
