--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ publish:
   only:
     - tags
   script:
-    - npm install
+    - npm install --no-optional
     - echo '//registry.npmjs.org/:_authToken=${NPM_TOKEN}'>.npmrc
     - npm publish
     - rm .npmrc
