--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ jobs:
       if: tag IS blank
       name: "Test lint and audit"
       script:
+        - rm -rf node_modules
+        - npm install --no-optional
         - npm dedupe
         - npm run lint
         - audit-ci --moderate
