--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
 	"name": "echojs-lib",
-	"version": "1.9.10",
+	"version": "1.10.0",
 	"description": "Pure JavaScript ECHO library for node.js",
 	"main": "./dist/index.js",
 	"types": "./types/index.d.ts",
 	"scripts": {
 		"pretest": "npm run build && babel-node ./test/preparation/preparation.js",
 		"test": "mocha --require @babel/register --require @babel/polyfill --exit",
-		"test-api": "mocha --compilers js:@babel/register --require @babel/polyfill test/api.test.js",
-		"test-subscriber": "mocha --compilers js:@babel/register --require @babel/polyfill test/subscriber.test.js",
-		"test-contract": "mocha --compilers js:@babel/register --require @babel/polyfill test/contract.test.js",
+		"test-api": "mocha  --require @babel/register --require @babel/polyfill test/api.test.js",
+		"test-subscriber": "mocha --require @babel/register --require @babel/polyfill test/subscriber.test.js",
+		"test-contract": "mocha  --require @babel/register --require @babel/polyfill test/contract.test.js",
 		"build": "npx babel src --out-dir dist",
 		"check-typing": "npx tsc",
 		"lint": "eslint .",
@@ -73,7 +73,7 @@
 		"eslint-plugin-react": "7.13.0",
 		"fs-extra": "^7.0.1",
 		"husky": "^2.7.0",
-		"mocha": "^5.2.0",
+		"mocha": "^7.1.1",
 		"redux": "^4.0.1",
 		"typescript": "^3.5.3"
 	}
