--- a/.test/docker-compose.yml
+++ b/.test/docker-compose.yml
@@ -2,7 +2,7 @@ version: "2"
 
 services:
   echo:
-    image: echoprotocol/echo:0.17.1-rc.5
+    image: echoprotocol/echo:0.18.0
     command:
       --start-echorand
       --account-info="[\"1.2.6\", \"5KkYp8qdQBaRmLqLz8WVrGjzkt7E13qVcr7cpdLowgJ1mjRyDx2\"]"
