--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"@types/crypto-js": "^3.1.43",
 		"@types/node": "^12.0.10",
 		"assert": "^1.4.1",
+		"axios": "^0.19.2",
 		"bigi": "^1.4.2",
 		"bignumber.js": "^8.0.1",
 		"bs58": "^4.0.1",
